1. Collection API Улучшения[#178990]